# rs2ts

./: Cargo.toml  LICENSE  README.md  TestStruct.ts
rs2ts-proc/: Cargo.toml
rs2ts-proc/src/: lib.rs
rs2ts-proc/tests/: test.rs
src/: lib.rs
src/rs2ts-derive/: Cargo.toml
src/rs2ts-derive/src/: lib.rs
tests/: test.rs
