[package]
name = "rs2ts"
version = "0.1.0"
authors = ["Jalmari Ikävalko <tzaeru@gmail.com>"]
edition = "2018"

[dependencies.syn]
version = "1.0.13"
features = ["extra-traits", "parsing", "full"]

[workspace]
members = [".", "rs2ts-proc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies.rs2ts-derive]
# path = "src/rs2ts-derive"